[package]
name = "claims-wasm"
version = "2.0.0"
edition = "2021"
publish = false
authors = ["Ovidiu Damian - Itheum"]

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.claims]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"
